@@ -537,8 +537,10 @@ void SusyNtTools::getNumberOf2LepJets(const JetVector& jets, int& Ncl, int& Ncb,
 /*--------------------------------------------------------------------------------*/
 // Check for jet in bad FCAL region
 /*--------------------------------------------------------------------------------*/
-bool SusyNtTools::hasJetInBadFCAL(JetVector& baseJets)
+bool SusyNtTools::hasJetInBadFCAL(JetVector& baseJets, uint run, bool isMC)
 {
+  // Only applied to data in periods C1 to C8
+  if(isMC || run<206248 || run>207332) return false;
   for(uint iJ=0; iJ<baseJets.size(); ++iJ){
     const Jet* j = baseJets.at(iJ);
     if(isBadFCALJet(j)) return true;
